--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
                             Navegação Rápida
                         </h3>
                         <ul class="quick-links">
-                            <li><a href="#news-slider-section">Notícias em Destaque</a></li>
+                            <li><a href="#news-slider-section">Notícias Principais</a></li>
                             <li><a href="#informacoes">Informações</a></li>
                             <li><a href="#perfil">Perfil do Egresso</a></li>
                             <li><a href="#atuacao">Campo de Atuação</a></li>
@@ -182,7 +182,7 @@
                   <!-- Notícias em Destaque (Slider) -->
                     <section id="news-slider-section" class="news-slider-section">
                     <div class="slider-header">
-                        <h2><i class="fas fa-star"></i> Notícias em Destaque</h2>
+                        <h2><i class="fas fa-star"></i>Notícias Principais</h2>
                         <p>Fique por dentro das últimas novidades e oportunidades do curso.</p>
                     </div>
 
