:rocket: new tadsbot link

--- a/mural-tads.html
+++ b/mural-tads.html
@@ -458,10 +458,9 @@
 
     <!-- Chatbot -->
     <div class="chatbot-container">
-        <a href="#" class="chatbot-link" 
+        <a href="https://huggingface.co/spaces/joaquimspinto/tadsbot-ifsul" target="_blank" class="chatbot-link" 
            aria-label="Abrir chat do TADSBot - Assistente virtual"
-           title="Clique para conversar com o TADSBot" 
-           onclick="alert('TADSBot em desenvolvimento!')">
+           title="Clique para conversar com o TADSBot">
             <div class="chatbot-tooltip">
                 💬 Precisa de ajuda? 
                 <br>🤖 Clique aqui para conversar com o TADSBot!
